2003-02-21  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Completed key listing changes

2003-02-19  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: key listing happens on demand, not creation,
	added ::get_key_pairs for performance improvements
	* seahorse-signer-menu: uses seahorse-context::get_key_pairs

2003-02-18  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-sign-file:
	* seahorse-verify-file:
	Added
	* seahorse-key-manager: Updated to use new file ops

2003-02-17  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Bug fix in ::set_ascii_armor
	* seahorse-key-manager: Added file ops to Tools Menu
	* seahorse-file-dialogs:
	* seahorse-encrypt-file:
	* seahorse-decrypt-file:
	Added
	* seahorse-file-manager: Removed

2003-02-16  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Made KeyIDs and Fingerprint selectable,
	updated for add-revoker
	* seahorse-ops-key: Added ::add_revoker
	* seahorse-key-manager: Updated for add-revoker
	* seahorse-key-dialogs: Added, removed all unecessary dialog headers

2003-02-15  Jacob Perkins  <jap1@users.sourceforge.net>

	* data/Makefile.am: Patch from Julio Merino for GConf2 tunnable features,
	fixes bug 106149
	* seahorse-sign: Added confirmation and info dialogs
	* seahorse-key-manager: Added Delete and Return accelerators
	* help/C/seahorse.xml: Replaced with new skeleton

2003-02-14  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-ops-key: Added EXPIRES option and state for ::sign
	* seahorse-sign: Added expires option for keys that expire

2003-02-12  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-widget: Added index property to SeahorseKeyWidget

2003-02-12  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2003-02-12  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: More interface updates, connect key op signals