@@ -50,6 +50,7 @@ Also check bugzilla for other tasks.
 [X] Right click key menu (Resp: Jacob)
 [?] If key's owner trust changes, must refresh all signed keys to recalc validity (wait for key signatures) (Resp: Jacob)
 [A] Create SeahorseKeyPair, is a SeahorseKey, has the secret GpgmeKey
+[ ] Use Gpgme IOCallbacks for more progress display: key loading, changing with larg key rings (Resp: Jacob)
 
 1.0 (Focus: Gnome integration & usability)
 --------------------------------------------
