@@ -1,6 +1,8 @@
 2003-02-21  Jacob Perkins  <jap1@users.sourceforge.net>
 
-	* seahorse-context: Completed key listing changes
+	* seahorse-context: Completed key listing changes,
+	uses SeahorseKeyPair
+	* seahorse-key-pair: Added
 
 2003-02-19  Jacob Perkins  <jap1@users.sourceforge.net>
 
